--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -60,7 +60,7 @@
                 <td th:text="${client.firstName}"></td>
                 <td th:text="${client.lastName}"></td>
                 <td>
-                    <a th:href="@{/clients/{id}/view(id=${client.id})}" class="btn btn-outline-primary btn-sm fw-bold">
+                    <a th:href="@{/clients/{id}/compteClient(id=${client.id})}" class="btn btn-outline-primary btn-sm fw-bold">
                         Voir ses comptes
                     </a>
                 </td>
