--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -11,7 +11,7 @@
 <header class="container">
     <nav>
         <ul>
-            <li><a href="/login">← Accueil</a></li>
+            <li><a href="/login">Accueil</a></li>
         </ul>
         <ul>
             <li><a href="/login">Se connecter</a></li>
