--- a/src/main/resources/templates/accounts.html
+++ b/src/main/resources/templates/accounts.html
@@ -22,6 +22,10 @@
 
     <h2 class="text-primary fw-bold">Comptes du client</h2>
     <h4 class="mb-4" th:text="${client.firstName + ' ' + client.lastName}"></h4>
+    <!-- Bouton pour créer une action -->
+    <div class="d-flex justify-content-end mb-4">
+        <button class="btn btn-success" @click="goToMarket()">Voir Market</button>
+    </div>
 
     <!-- Tableau des comptes -->
     <div class="table-responsive shadow-sm rounded mb-4">
@@ -170,6 +174,12 @@
                 const token = localStorage.getItem('jwt');
                 if (!token) return alert("Vous devez être connecté !");
                 window.location.href = '/actions';
+            },
+
+            goToMarket() {
+                const token = localStorage.getItem('jwt');
+                if (!token) return alert("Vous devez être connecté !");
+                window.location.href = '/market';
             },
 
             logout() {
